# powercapping

./: .gitignore
benchmarks/: CMakeLists.txt
benchmarks/src/: ping_pong_cpu.cpp  ping_pong_gpu_direct.cu
configs/: jedi.json  jureca.json  leonardo.json  thea.json
containers/base_mpi/: recipe.py
containers/benchmarks/: benchmarks_thea.def  recipe.py
containers/exahype/: exahype_jedi.def  exahype_jureca.def  exahype_leo.def  exahype_thea.def  recipe.py
containers/openmpi/: imagedef_thea  openmpi_thea.def  recipe.py
containers/openmpi_devel/: openmpi_devel_thea.def  recipe.py
containers/seissol/: generate_steps.sh  recipe.py  seissol_jedi.def  seissol_jureca.def  seissol_leo.def  seissol_thea.def
inputs/seissol/: README.md
inputs/seissol/input/: submit.slurm
scripts/: generate_steps.sh
scripts/seissol/: setup-sim.sh
